Bug 98985 - Mail merge functions create results at the wrong time
Summary: Mail merge functions create results at the wrong time
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks: Mail-Merge
  Show dependency treegraph
 
Reported: 2016-03-30 13:58 UTC by Oliver Specht (CIB)
Modified: 2021-04-19 15:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2016-03-30 13:58:09 UTC
- Run and finish mail merge wizard
- call Save/Print Merged Documents or Send E-Mail Messages
-> a progress box is displayed while the resulting documents are created in the background, the dialog to save/print/send appears after that
So you have to wait until it finishes all documents also if you only need a single document for printing/saving/sending
Comment 1 Jan Holesovsky 2016-04-08 10:15:58 UTC
IIRC that was there before too, just this happened in the middle of the wizard, when the 'target' document was being created [sometime between the step 5 and 6 or so].

Of course, improvements there would be much appreciated - but I don't think this is a regression against the state that was there before :-)
Comment 2 Oliver Specht (CIB) 2016-04-08 11:44:04 UTC
Your only partially right.
The created documents did exist as long as the wizard was open. So you could decide to save the document and then print.
If you want to do this today you have to wait for the creation twice. 
And that _is_ a regression that makes live pretty hard for those with bigger data tables with more than 1000 rows.


BTW: The toolbox approach could additionally make it possible to get rid of the complete processing at all. Just a merge-and-save/print per data row instead of creating this big resulting document which has only been introduced to make editing/reviewing possible.
Comment 3 Commit Notification 2016-05-19 07:09:19 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b24f21a46d8f9321434e40e6f9821df0ed2e2d3

tdf#98985 create merge results at the right time

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Oliver Specht (CIB) 2016-05-19 07:13:18 UTC
(In reply to Commit Notification from comment #3)
> Oliver Specht committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=7b24f21a46d8f9321434e40e6f9821df0ed2e2d3
> 
> tdf#98985 create merge results at the right time
> 
This patch fixes one part - the merge takes place at the moment the user executes print/save or send. 
It still creates all documents also if only some of them are required
Comment 5 Marco Filippozzi 2016-06-16 07:43:06 UTC
Works for me on 5.2.0.0 and it only creates the selected documents.
Bug still present in the Still and Fresh version: the documents are created before the Print/Save/Send Email window appears, and that is between step 6 and 7.
Comment 6 QA Administrators 2017-10-23 13:58:24 UTC Comment hidden (obsolete)
Comment 7 NISZ LibreOffice Team 2021-04-19 15:23:29 UTC
(In reply to Oliver Specht (CIB) from comment #4)
> (In reply to Commit Notification from comment #3)
> > Oliver Specht committed a patch related to this issue.
> > It has been pushed to "master":
> > 
> > http://cgit.freedesktop.org/libreoffice/core/commit/
> > ?id=7b24f21a46d8f9321434e40e6f9821df0ed2e2d3
> > 
> > tdf#98985 create merge results at the right time
> > 
> This patch fixes one part - the merge takes place at the moment the user
> executes print/save or send. 
> It still creates all documents also if only some of them are required

This second part was recently fixed in bug #117212
I think it's safe to set close one now.