tdf#98985 create merge results at the right time

When using mail merge toolbar the resulting documents are now created
on OK in Save/Print and Send dialogs.
Additionally the 'To' is set in the save dialog and the
MailMergeConfigItem ist not deleted twice anymore.

Change-Id: I21f1f49d8bbd40c11b6f771e15b89e0f6c4bc87a